# GpuHash

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
crates/gpuhash-cli/: Cargo.toml
crates/gpuhash-cli/src/: main.rs
crates/gpuhash-core/: Cargo.toml
crates/gpuhash-core/examples/: gen_examples.rs
crates/gpuhash-core/src/: attacks.rs  benchmark.rs  config.rs  digest.rs  engine.rs  error.rs  event.rs  gpu.rs  hash.rs  lib.rs  loader.rs  mask.rs  session.rs
crates/gpuhash-core/src/gpu/: bruteforce_runner.rs  buffers.rs  kernel_spec.rs  mod.rs  runner.rs
crates/gpuhash-core/src/gpu/algos/: md5.rs  mod.rs  sha1.rs  sha256.rs
crates/gpuhash-core/src/gpu/shaders/: md5.wgsl  md5_bruteforce.wgsl  md5_common.wgsl  md5_dict.wgsl
crates/gpuhash-core/src/gpu/shaders/common/: bruteforce.wgsl  dict.wgsl  match.wgsl
crates/gpuhash-core/src/gpu/shaders/md5/: bruteforce.wgsl  dict.wgsl  funcs.wgsl
crates/gpuhash-core/src/gpu/shaders/sha1/: bruteforce.wgsl  dict.wgsl  funcs.wgsl
crates/gpuhash-core/src/gpu/shaders/sha256/: bruteforce.wgsl  dict.wgsl  funcs.wgsl
crates/gpuhash-core/tests/: big_audit.rs
crates/gpuhash-tauri/: index.html  package-lock.json  package.json
crates/gpuhash-tauri/src/: main.ts  styles.css
crates/gpuhash-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/gpuhash-tauri/src-tauri/capabilities/: default.json
crates/gpuhash-tauri/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  ETHICS.md  LOGBOOK.md  ROADMAP.md
examples/: README.md  big_dict.txt  big_md5.txt  brute_4lower_md5.txt  brute_5lower_md5.txt  medium_dict.txt  medium_md5.txt  medium_sha1.txt  medium_sha256.txt  sample_hashes.txt  tiny_dict.txt
scripts/: smoke.ps1
