[package]
name = "gpuhash-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line frontend for the GPU Password Auditing Framework."

[[bin]]
name = "gpuhash"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"
rust_2018_idioms = "warn"

[dependencies]
gpuhash-core       = { path = "../gpuhash-core" }
clap               = { workspace = true }
anyhow             = { workspace = true }
tokio              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
